<resources>
    <string name="app_name">CRM</string>

    <string name="text_btn_get_photo">Сделать фото</string>
    <string name="text_desc_image_view">photo</string>
    <string name="text_btn_post_photo">Отправить</string>
    <string name="text_btn_add_address">Добавить адрес</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_title_street">Улица</string>
    <string name="fragment_title_home">Дом</string>
    <string name="fragment_title_district">Район</string>
    <string name="fragment_title_photo_unit">Фото узла</string>
    <string name="title_drawer_my_task">Мои заявки</string>
    <string name="fragment_title_task">Мои заявки</string>
    <string name="text_exit_login">Выход</string>
    <string name="radio_btn_yesterday">Вчера</string>
    <string name="radio_btn_today">Сегодня</string>
    <string name="radio_btn_tomorrow">Завтра</string>
    <string name="radio_btn_appointed">Назначена</string>
    <string name="radio_btn_closed">Закрыта</string>
    <string name="text_address_close_task">Адрес:</string>
    <string name="text_tv_address_close_task">----</string>
    <string name="text_btn_close_task">Закрыть</string>
    <string name="text_hint_ti_close_task">комментарий..</string>
    <string name="text_comment_close_task">Комментарий</string>
    <string name="text_tv_comment_close_task">-------</string>
    <string name="fragment_title_close_task">Закрытие заявки</string>
    <string name="fragment_title_authorization">CRM</string>
    <string name="type_of_material_text">Потраченный материал:</string>
    <string name="text_count_used_material_text">Количество потраченого материала:</string>
    <string name="text_name_material">---------</string>
    <string name="hint_count_material">шт, м</string>
    <string name="text_btn_save_used_material">далее</string>
    <string name="tv_name_used_material_rcv_text">Название материала</string>
    <string name="tv_count_used_material_rcv_text">Количество</string>
    <string name="fragment_title_select_material">Списание материала</string>
    <string name="fragment_title_count_material">Списание материала</string>
    <string name="expand_all">Expand all</string>
    <string name="collapse_all">Collapse all</string>
    <string name="login_te_hint_text">Логин</string>
    <string name="password_te_hint_text">Пароль</string>
    <string name="btn_sign_in_text">Войти</string>
    <string name="text_tv_type_service">Интернет</string>
    <string name="text_tv_type_tv">Телевидение</string>
    <string name="text_tv_type_domofon">Домофон</string>
    <string name="text_tv_type_all">Все</string>
    <string name="text_tv_address_task">Адрес:</string>
    <string name="text_tv_comment_text">Комментарий:</string>
    <string name="text_tv_date_of_completion">Дата выполнения:</string>
    <string name="text_tv_time_completion">Рекомендуемое время:</string>
    <string name="text_tv_phone_text">Телефон:</string>
    <string name="text_tv_is_money">-------</string>
    <string name="test_tv_summ">Сумма:</string>
    <string name="text_tv_hint_summ">тг</string>
    <string name="text_tv_btn_add_material">+ материал</string>
    <string name="text_status_user">Статус</string>
    <string name="text_name_user">Имя пользователя</string>
    <string name="text_auth_this">Авторизация</string>
    <string name="desc_icon_user">Icon_user</string>
    <string name="text_tv_version_app">ver x.x.x</string>
    <string name="text_problem_tv">Неполадки:</string>
    <string name="text_cont_desc_pay_task">Pay Task</string>
    <string name="text_pass">-----</string>
    <string name="empty_text" />
    <string name="input_login_password">Введите логин/пароль</string>
    <string name="allowed_latin">\Разрешены латинские символы и цифры</string>
    <string name="text_tv_number_agreement">Номер договора:</string>
    <string name="text_tv_state_account">Учетная запись:</string>
    <string name="text_tv_balance">Баланс:</string>
    <string name="text_tv_tariff">Тариф:</string>
    <string name="text_tv_address">Адрес:</string>
    <string name="text_tv_phone_client_card">Телефон:</string>
    <string name="text_tv_port">Номер порта:</string>
    <string name="text_tv_node">Адрес узла:</string>
    <string name="text_tv_cable">Кабель тест:</string>
    <string name="text_tv_error_port">Ошибки на порту:</string>
    <string name="text_tv_session">Активная сессия:</string>
    <string name="text_tv_port_link">Линк:</string>
    <string name="text_tv_mac_address">MAC:</string>
    <string name="fragment_title_card_client">Карта абонента</string>
    <string name="text_tv_tools">Инструменты</string>
    <string name="text_btn_run_vct">Test</string>
    <string name="text_for_money">только за $</string>
    <string name="text_tv_model_sw">Модель свитча:</string>
    <string name="btn_errors_text">ошибки</string>
    <string name="btn_text_speed">port</string>
    <string name="fragment_title_details_task">История действий</string>
    <string name="name_channel_notify">channel_notification_task</string>
    <string name="title_drawer_clients">Клиенты</string>
    <string name="fragment_title_entrance">Номер подъезда</string>
    <string name="fragment_title_clients_entrance">Клиенты в подъезде</string>
    <string name="fragment_title_admin_panel">Tools</string>
    <string name="drawer_item_admin_tool">Admin tools</string>

</resources>