<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CloseTaskFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_comment_close_task">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/te_input_comment_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_ti_close_task" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_close_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/text_btn_close_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_input_summ" />

    <TextView
        android:id="@+id/tv_address_close_task_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/text_address_close_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_address_close_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_address_close_task"
        app:layout_constraintStart_toEndOf="@+id/tv_address_close_task_text"
        app:layout_constraintTop_toTopOf="@+id/tv_address_close_task_text" />

    <TextView
        android:id="@+id/tv_comment_close_task_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_comment_close_task"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_address_close_task_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_close_task_text" />

    <TextView
        android:id="@+id/tv_comment_close_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_tv_comment_close_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_comment_close_task_text"
        app:layout_constraintTop_toTopOf="@+id/tv_comment_close_task_text" />

    <TextView
        android:id="@+id/tv_summ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_tv_summ"
        app:layout_constraintStart_toStartOf="@+id/list_used_material"
        app:layout_constraintTop_toTopOf="@+id/te_input_summ" />

    <EditText
        android:id="@+id/te_input_summ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="3"
        android:autofillHints="@string/text_tv_hint_summ"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintStart_toEndOf="@+id/tv_summ"
        app:layout_constraintTop_toBottomOf="@+id/list_used_material" />

    <TextView
        android:id="@+id/tv_type_of_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/type_of_material_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_used_material"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_material" />

    <Button
        android:id="@+id/btn_add_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_tv_btn_add_material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>