<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AuthorizationFragment">

    <EditText
        style="@style/Theme.PhotoUnit.AuthorizationFragment.TextEdit"
        android:id="@+id/te_user_login"
        android:layout_marginTop="64dp"
        android:autofillHints="@string/login_te_hint_text"
        android:hint="@string/login_te_hint_text"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_auth" />

    <EditText
        style="@style/Theme.PhotoUnit.AuthorizationFragment.TextEdit"
        android:id="@+id/te_password"
        android:layout_marginTop="16dp"
        android:hint="@string/password_te_hint_text"
        android:autofillHints="@string/password_te_hint_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_user_login" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/btn_sign_in_text"
        app:layout_constraintEnd_toEndOf="@+id/te_password"
        app:layout_constraintStart_toStartOf="@+id/te_password"
        app:layout_constraintTop_toBottomOf="@+id/te_password" />

    <ProgressBar
        android:id="@+id/load_input"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/te_password"
        app:layout_constraintStart_toStartOf="@+id/te_password"
        app:layout_constraintTop_toBottomOf="@+id/te_password" />

    <TextView
        style="@style/Theme.PhotoUnit.AuthText"
        android:id="@+id/text_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_auth_this"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>