<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/header_img"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/photoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/desc_icon_user"
        app:layout_constraintBottom_toTopOf="@+id/status_user"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/status_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_status_user"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_user"
        app:layout_constraintStart_toStartOf="@+id/photoUser" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_name_user"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/status_user" />

    <TextView
        android:id="@+id/tv_ver_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ver 0.0.1"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>