<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_card_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.task.ClientCardFragment">

    <TextView
        android:id="@+id/tv_number_agreement"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_number_agreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_client_card" />

    <TextView
        android:id="@+id/tv_address_value"
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/tv_address"
        app:layout_constraintTop_toTopOf="@+id/tv_address"
        tools:text="Корчагина 94-56" />

    <TextView
        android:id="@+id/tv_phone_client_card_value"
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:layout_marginStart="8dp"
        android:text=""
        android:autoLink="phone"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_client_card"
        app:layout_constraintTop_toTopOf="@+id/tv_phone_client_card"
        tools:text="87779876321" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_phone_client_card"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_phone_client_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_number_agreement_value"
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/tv_number_agreement"
        app:layout_constraintTop_toTopOf="@+id/tv_number_agreement"
        tools:text="112356" />

    <TextView
        android:id="@+id/tv_state_account"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_state_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_agreement" />

    <TextView
        android:id="@+id/tv_session"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_session"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tariff" />

    <TextView
        android:id="@+id/tv_tariff"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_tariff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_balance" />

    <TextView
        android:id="@+id/tv_port"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_session_value" />

    <TextView
        android:id="@+id/tv_link_port_value"
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_get_link"
        app:layout_constraintStart_toStartOf="@+id/tv_cable_test_value"
        tools:text="Up"/>

    <TextView
        android:id="@+id/tv_node"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_node"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginTop="12dp"
        android:text="@string/text_tv_model_sw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_port" />

    <TextView
        android:id="@+id/tv_balance"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginStart="8dp"
        android:text="@string/text_tv_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_state_account" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_state_account_value"
        android:layout_marginStart="8dp"
        android:text=""
        tools:text="Активна"
        app:layout_constraintStart_toEndOf="@+id/tv_state_account"
        app:layout_constraintTop_toTopOf="@+id/tv_state_account" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_balance_value"
        android:layout_marginStart="8dp"
        android:text=""
        tools:text="1156"
        app:layout_constraintStart_toEndOf="@+id/tv_balance"
        app:layout_constraintTop_toTopOf="@+id/tv_balance" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_tariff_value"
        android:layout_marginStart="8dp"
        android:text=""
        tools:text="Космос 28"
        app:layout_constraintStart_toEndOf="@+id/tv_tariff"
        app:layout_constraintTop_toTopOf="@+id/tv_tariff" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_session_value"
        android:layout_marginStart="8dp"
        android:text=""
        tools:text="87.76.54.125"
        app:layout_constraintStart_toEndOf="@+id/tv_session"
        app:layout_constraintTop_toTopOf="@+id/tv_session" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_node_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        tools:text="Корчагина 94, 3п, 5э "
        app:layout_constraintStart_toEndOf="@+id/tv_node"
        app:layout_constraintTop_toTopOf="@+id/tv_node" />

    <TextView
        android:id="@+id/tv_cable_test_value"
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cable_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cable_test"
        tools:text="1-2:open:80 Ʇ| 3-6:well:0" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_number_port_value"
        android:layout_marginStart="8dp"
        android:text=""
        tools:text="15"
        app:layout_constraintStart_toEndOf="@+id/tv_port"
        app:layout_constraintTop_toTopOf="@+id/tv_port" />

    <Button
        android:id="@+id/btn_cable_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_cable_test"
        android:text="@string/text_btn_run_vct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tools" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_node_value" />

    <TextView
        android:id="@+id/tv_tools"
        style="@style/Theme.PhotoUnit.ClientCard.TextView"
        android:layout_marginTop="8dp"
        android:text="@string/text_tv_tools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/btn_get_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Link "
        android:drawableLeft="@drawable/ic_ethernet_netral1"
        app:layout_constraintStart_toStartOf="@+id/btn_cable_test"
        app:layout_constraintTop_toBottomOf="@+id/btn_cable_test" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/load_cable_test"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/btn_cable_test"
        app:layout_constraintTop_toTopOf="@+id/btn_cable_test" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/load_link_test"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/btn_get_link"
        app:layout_constraintTop_toTopOf="@+id/btn_get_link" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_model_sw_value"
        android:layout_marginStart="8dp"
        android:text=""
        tools:text="SNR-2960-24G"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/btn_errrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_error_btn"
        android:text="@string/btn_errors_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_get_link" />

    <TextView
        android:id="@+id/tv_crc_errors_value"
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/btn_errrors"
        app:layout_constraintTop_toBottomOf="@+id/btn_errrors"
        tools:text="177" />

    <Button
        android:id="@+id/btn_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_text_speed"
        android:drawableLeft="@drawable/ic_speed_port"
        app:layout_constraintStart_toStartOf="@+id/btn_get_link"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_link" />

    <TextView
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:id="@+id/tv_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="100 M/bits"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_speed"
        app:layout_constraintStart_toStartOf="@+id/tv_link_port_value" />

    <TextView
        android:id="@+id/tv_drop_errors_value"
        style="@style/Theme.PhotoUnit.ClientCard.TextViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/tv_crc_errors_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_crc_errors_value"
        tools:text="1569" />

    <Button
        android:id="@+id/go_compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="20dp"
        android:text="compose"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

